[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/Augusta One.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Control.gd" type="Script" id=2]
[ext_resource path="res://resources/006_content_big.jpg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -2.0
margin_right = 6.0
margin_bottom = -2.0
script = ExtResource( 2 )

[node name="006ContentBig" type="Sprite" parent="."]
position = Vector2( 506.989, 305.181 )
scale = Vector2( 0.539595, 0.552188 )
texture = ExtResource( 3 )

[node name="b_newgame" type="Button" parent="."]
margin_left = 346.0
margin_top = 59.0
margin_right = 646.0
margin_bottom = 129.0
rect_pivot_offset = Vector2( 68, 74 )
theme = SubResource( 2 )
text = "NewGame"

[node name="b_save" type="Button" parent="."]
margin_left = 352.0
margin_top = 281.0
margin_right = 652.0
margin_bottom = 351.0
rect_pivot_offset = Vector2( 68, 74 )
theme = SubResource( 2 )
text = "Save"

[node name="b_exit" type="Button" parent="."]
margin_left = 349.0
margin_top = 476.0
margin_right = 649.0
margin_bottom = 546.0
rect_pivot_offset = Vector2( 68, 74 )
theme = SubResource( 2 )
text = "Exit"

[node name="b_load" type="Button" parent="."]
margin_left = 344.0
margin_top = 382.0
margin_right = 644.0
margin_bottom = 452.0
rect_pivot_offset = Vector2( 68, 74 )
theme = SubResource( 2 )
text = "Load"

[node name="b_resume" type="Button" parent="."]
margin_left = 347.0
margin_top = 172.0
margin_right = 647.0
margin_bottom = 242.0
rect_pivot_offset = Vector2( 68, 74 )
theme = SubResource( 2 )
text = "Resume"

[connection signal="pressed" from="b_newgame" to="." method="_on_b_newgame_pressed"]
[connection signal="pressed" from="b_save" to="." method="_on_b_save_pressed"]
[connection signal="pressed" from="b_exit" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="b_load" to="." method="_on_b_load_pressed"]
[connection signal="pressed" from="b_resume" to="." method="_on_b_resume_pressed"]
